# profane_detector

./: .gitignore  README.md  profane_detector.py  pyproject.toml  release.bat  requirements.txt  setup.py
.github/workflows/: python-publish.yml
profane_detector/: __init__.py  profane_detector.py
profane_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
swear-words/: README.md  USERS.md  ar  cs  da  de  en  eo  es  fa  fi  fr  fr-CA-u-sd-caqc  hi  hu  it  ja  ko  nl  no  pl  pt  ru  sv  th  tlh  tr  zh
